# agentic_quizzes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  app.py  pyproject.toml  quiz_tools.py
.claude/skills/build-rag/: SKILL.md
.claude/skills/generate-quiz/: SKILL.md
.claude/skills/ingest-docs/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pipeline.yml
.kilocode/: agent.yaml  instructions.md  policies.md
nanoclaw/config/: modelfile_qwen3_nothink.txt  settings.yaml
nanoclaw/prompts/: quiz_system.md  validate_system.md
nanoclaw/tasks/: build_index.sh  eval_quiz.sh  generate_quiz.sh  ingest.sh
sandbox/: Dockerfile  example_policy_patch.md  mini_bash_agent.py
scripts/: quality_gate.py
skills/generate-quiz/: SKILL.md
skills/improve-quiz-policy/: SKILL.md
skills/review-quiz-quality/: SKILL.md
src/common/: config.py  models.py  ollama_client.py  slug.py
src/ingest/: _fence.py  chunk.py  clean.py  enrich_metadata.py  parse.py  parse_docling.py
src/quiz/: export.py  generate.py  validate.py
src/rag/: embed.py  index.py  retrieve.py
tests/: test_collision.py  test_export.py  test_ingest.py  test_models.py  test_retrieve.py  test_validate.py
