[project]
name = "nanoclaw-quizzes"
version = "0.1.0"
description = "NanoClaw quiz generation from source documents using local LLMs"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.10",  # 1.10+ required for query_points() API
    "ollama>=0.4.4",  # 0.4.4+ required for the `think` kwarg (Qwen3 chain-of-thought control)
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "docling>=2.0",  # required for PDF parsing (structured Markdown with tables/code/headings)
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
    "pre-commit>=3.7",
]
app = [
    "gradio>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
